syntax = "proto3";

package rti;

message ResponseTimeBarReplay
	{                       
	enum BarType {
    BARTYPE_UNSPECIFIED = 0;
	              SECOND_BAR    =  1;
		      MINUTE_BAR    =  2;
		      DAILY_BAR     =  3;
		      WEEKLY_BAR    =  4;
	             }
              
	int32   template_id                 = 154467;
	string  request_key                 = 132758;
	repeated string  user_msg                    = 132760;
	repeated string  rq_handler_rp_code          = 132764;
	repeated string  rp_code                     = 132766;

	string  symbol                      = 110100;
	string  exchange                    = 110101;

	BarType type                        = 119200;
	string  period                      = 119112;
	int32   marker                      = 119100;
	uint64  num_trades                  = 119109;
	uint64  volume                      = 119110;
	uint64  bid_volume                  = 119117;
	uint64  ask_volume                  = 119118;
	double  open_price                  = 100019;
	double  close_price                 = 100021;
	double  high_price                  = 100012;
	double  low_price                   = 100013;
	double  settlement_price            = 100070;
	bool    has_settlement_price        = 149138;
	bool    must_clear_settlement_price = 154571;
	}
